[package]
name = "rustyback"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0"
once_cell = "1.19"
tar = "0.4"
whoami = "1.5"
glob = "0.3"
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0.30"